# model-training

./: .mllint.yml  Dockerfile  LICENSE  Makefile  README.md  Test_prediction.py  b1_Sentiment_Analysis_Model.ipynb  b2_Sentiment_Predictor.ipynb  dvc.yaml  metrics.json  naive-bayes.json  output.txt  pylintrc  pyproject.toml  random-forest.json  report.html  requirements.txt  roberta.json  setup.py  tests-report.xml  text_classification.py  text_preprocessing.py
.dvc/: config
.github/workflows/: analyze_code.yaml  build_model_training_image.yaml  helmPackageAndPush.yaml  upload_model.yaml
base_project/: b1_Sentiment_Analysis_Model.ipynb  c1_BoW_Sentiment_Model.pkl
data/interim/: c1_BoW_Sentiment_Model.pkl.dvc
data/processed/: .gitignore  preprocessed_data.joblib.dvc  processed_data.joblib.dvc
data/raw/: a1_RestaurantReviews_HistoricDump.tsv.dvc
docs/: conf.py
helm-chart/model-training-chart/: Chart.yaml
helm-chart/model-training-chart/templates/: deployment.yaml  serviceMonitor.yaml
model-training-chart/: Chart.yaml  values.yaml
model-training-chart/templates/: service.yaml
models/: .gitignore
notebooks/: b1_Sentiment_Analysis_Model.ipynb  b2_Sentiment_Predictor.ipynb
output/: c1_BoW_Sentiment_Model.pkl  preprocessed_data.joblib  preprocessor.joblib
src/: text_classification.py  text_preprocessing.py  train_model.py
src/data/: make_dataset.py
src/models/: train_model.py  train_random_forest.py  train_twt_roberta_model.py
src/web_interface/: web_interface.py
src/web_interface/templates/: index.html
tests/: data_feature_test.py  integration_test.py  model_development_test.py  monitoring_test.py  test_data_feature.py  test_data_slice.py  test_integration.py  test_model_development.py  test_monitoring.py  test_robustness.py
