[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Emilia Rieschel"]
readme = "README.md"
packages = [{include = "model_training"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.20.2"
nltk = "3.6.1"
matplotlib = "3.4.1"
scikit-learn = "1.2.2"
transformers = "^4.30.2"
torch = "^2.0.1"
dvc-gdrive = "^2.20.0"
dvc-s3 = "^2.23.0"
pytest-html = "^3.2.0"
flask = "^2.3.2"
flasgger = "^0.9.7.1"
joblib = "^1.2.0"
prometheus-client = "^0.17.0"
click = "^8.1.3"
gitpython = "^3.1.31"
python-dotenv = "^1.0.0"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.7"
dvc = "^3.2.1"
isort = "^5.12.0"
mllint = "^0.12.2"
mypy = "^0.931"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
sphinx = "^7.0.1"
dslinter = "^2.0.9" 

[testing.coverage.report]
report = "tests-report.xml"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
