[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Emilia Rieschel"]
readme = "README.md"
packages = [{include = "model_training"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "1.20.2"
pandas = "1.2.4"
nltk = "3.6.1"
scipy = "1.6.2"
matplotlib = "3.4.1"
scikit-learn = "1.2.2"
transformers = "*"
torch = "*"
pytest = "*"
dvc = "*"
dvc-gdrive = "*"
dvc-s3 = "*"
pytest-cov = "*"
pytest-html = "*"
flask = "*"
flasgger = "*"
joblib = "*"
prometheus_client = "*"
click = "*"
Sphinx = "*"
coverage = "*"
gitpython = "*"
flake8 = "*"
python-dotenv = "*"
mllint = "*"
dslinter = "*"
pylint = "2.12.2"
mypy = "*"
black = "*"
isort = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"