[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Emilia Rieschel"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "1.20.2"
pandas = "1.2.4"
nltk = "3.6.1"
scipy = "1.6.2"
matplotlib = "3.4.1"
scikit-learn = "1.2.2"
dvc-gdrive = "*"
dvc-s3 = "*"
pytest-html = "*"
flask = "*"
flasgger = "*"
joblib = "*"
prometheus_client = "*"
click = "*"
Sphinx = "*"
gitpython = "*"
python-dotenv = "*"
dslinter = "*"
torch = "2.0.0"
transformers = "^4.30.2"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
isort = "*"
pylint = "2.12.2"
mypy = "*"
mllint = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
dvc = "*"
coverage = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
